--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.application.name=schedules
 #3306 -> MySQL? IANA?? ????? 3306? ???? ??? ?? ?????? ????? 3306? ????? ??
 spring.datasource.url=jdbc:mysql://localhost:3306/schedule
 spring.datasource.username=root
-spring.datasource.password=thd135531@
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
